Archive2/f5/a8e3b13de5060d/output
main.cpp:38:14: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
    int test1[pass.length()];
             ^
main.cpp:31:19: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
            if( a >= phrase.length() )
                ~ ^  ~~~~~~~~~~~~~~~
main.cpp:39:23: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
    for( int x = 0; x < phrase.length(); x++ )
                    ~ ^ ~~~~~~~~~~~~~~~
main.cpp:44:39: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
                    for( int y = 0; y < alphabet.length(); y++ )
                                    ~ ^ ~~~~~~~~~~~~~~~~~
main.cpp:61:24: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
    for( int i = 0 ; i < sizeof( test1 ) / sizeof( test1[0] ); i++ )
                     ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:71:24: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
    for( int i = 0 ; i < sizeof( test1 ) / sizeof( test1[0] ); i++ )
                     ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:79:39: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
                    for( int y = 0; y < alphabet.length(); y++ )
                                    ~ ^ ~~~~~~~~~~~~~~~~~
main.cpp:128:14: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
    int test1[decy.length()];
             ^
main.cpp:122:19: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
            if( a >= phrase.length() )
                ~ ^  ~~~~~~~~~~~~~~~
main.cpp:129:23: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
    for( int x = 0; x < phrase.length(); x++ )
                    ~ ^ ~~~~~~~~~~~~~~~
main.cpp:135:39: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
                    for( int y = 0; y < alphabet.length(); y++ )
                                    ~ ^ ~~~~~~~~~~~~~~~~~
main.cpp:158:24: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
    for( int i = 0 ; i < sizeof( test1 ) / sizeof( test1[0] ); i++ )
                     ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:162:39: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
                    for( int y = 0; y < alphabet.length(); y++ )
                                    ~ ^ ~~~~~~~~~~~~~~~~~
11 warnings and 2 errors generated.
